# Energy-Consumption-Forecast-and-AI-Analytics

./: .gitignore  README.md
forecasting/: .flake8  README.md  pyproject.toml
forecasting/src/: .env.example  config.py  forecast_pipeline.py
forecasting/src/data_steps/: cv_test_splitter.py  data_importer.py  data_saver.py  forecast_generator.py  preprocessor.py  train_data_adder.py
forecasting/src/modeling/: __init__.py  model_factory.py  wis_score.py
forecasting/src/modeling/cv/: cv_params.py  optuna_objective.py  optuna_study.py  trial_param_dict.py
forecasting/src/utils/: plot_data.py  timestamp_type_convertor.py
